<resources>
    <string name="app_name">News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy">gistration link :https://next-eg.com/wazeefa-tech/Dear Candidate, Thank you for your interest in the Oracle Job opportunities through Wazeefa Tech Initiative – Phase IVNext Academy would like to invite you to attBased on our conversation; kindly find the attached file the below registration link :https://next-eg.com/wazeefa-tech/Dear Candidate, Thank you for your interest in the Oracle Job opportunities through Wazeefa Tech Initiative – Phase IVNext Academy would like to invite you to attBased on our conversation; kindly find the attached file the below registration link :https://next-eg.com/wazeefa-tech/Dear Candidate, Thank you for your interest in the Oracle Job opportunities through Wazeefa Tech Initiative – Phase IVNext Academy would like to invite you to attBased on our conversation; kindly find the attached file the below registration link :https://next-eg.com/wazeefa-tech/Dear Candidate, Thank you for your interest in the Oracle Job opportunities through Wazeefa Tech Initiative – Phase IVNext Academy would like to invite you to attend to the head office for the first round of selection process which includes (English Test, IQ Test, and HR Interview) Based on our conversation; kindly find the attached file the below registration link :https://next-eg.com/wazeefa-tech/Dear Candidate, Thank you for your interest in the Oracle Job opportunities through Wazeefa Tech Initiative – Phase IVNext Academy would like to invite you to attBased on our conversation; kindly find the attached file the below registration link :https://next-eg.com/wazeefa-tech/Dear Candidate, Thank you for your interest in the Oracle Job opportunities through Wazeefa Tech Initiative – Phase IVNext Academy would like to invite you to attBased on our conversation; kindly find the attached file the below registration link :https://next-eg.com/wazeefa-tech/Dear Candidate, Thank you for your interest in the Oracle Job opportunities through Wazeefa Tech Initiative – Phase IVNext Academy would like to invite you to attBased on our conversation; kindly find the attached file the below registration link :https://next-eg.com/wazeefa-tech/Dear Candidate, Thank you for your interest in the Oracle Job opportunities through Wazeefa Tech Initiative – Phase IVNext Academy would like to invite you to attBased on our conversation; kindly find the attached file the below registration link :https://next-eg.com/wazeefa-tech/Dear Candidate, Thank you for your interest in the Oracle Job opportunities through Wazeefa Tech Initiative – Phase IVNext Academy would like to invite you to attend to the head office for the first round of selection process which includes (English Test, IQ Test, and HR Interview)</string>
    <string name="title">Title</string>
    <string name="time">time</string>
    <string name="trending">Trending</string>
    <string name="health">Health</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="author">author</string>
    <string name="business">Business</string>
    <string name="link">For more visit: %s</string>
</resources>